cabal-version:      3.6
name:               study
version:            0.1.0.0

author:             mtwtkman
maintainer:         924277+mtwtkman@users.noreply.github.com

executable study
    main-is:          Main.hs
    build-depends:    base
                    , study
    hs-source-dirs:   app
    default-language: Haskell2010

library
    build-depends:  base
                  , parsec
                  , array
    hs-source-dirs: lib
    default-language: Haskell2010
    exposed-modules: Scheme

test-suite test
    type:            exitcode-stdio-1.0
    main-is:         Test.hs
    hs-source-dirs:  test
    build-depends:   base
                   , tasty
                   , tasty-smallcheck
                   , smallcheck
                   , study
                   , array
